Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
     {
       id: "site-ultime",
       title: "LE SITE ULTIME (index)",
-      file: "index.html",
+      file: "https://fr.wikipedia.org/wiki/Wikip%C3%A9dia:Accueil_principal",
       category: "base",
       kind: "niveaux -1 → 3",
       description: "Le fichier qui permet de partir de zéro et monter progressivement."
@@ -1234,6 +1234,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
