--- a/index.html
+++ b/index.html
@@ -1001,7 +1001,7 @@
 {
       id: "univ",
       title: "LE SITE ULTIME (école)",
-      file: "univ.html",
+      file: "https://www.toupie.org/Dictionnaire/Democratie.htm",
       category: "univ",
       kind: "niveaux -0 → -1",
       description: "Le fichier qui permet de partir de zéro et descendre progressivement."
@@ -1234,6 +1234,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
