--- a/index.html
+++ b/index.html
@@ -1016,6 +1016,14 @@
       category: "intra",
       kind: "niveaux -7 → 9",
       description: "Le fichier qui te permet de partir de 7 et de finir en beauté."
+    },
+    {
+      id: "intra",
+      title: "LE SITE ULTIME (intra)",
+      file: "kinder.html",
+      category: "intra",
+      kind: "niveaux -18 → 99+",
+      description: "Le fichier qui te permet de partir sur autre chose."
     }
 
 
@@ -1242,6 +1250,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
