--- a/index.html
+++ b/index.html
@@ -1018,13 +1018,39 @@
       description: "Le fichier qui te permet de partir de 7 et de finir en beauté."
     },
     {
-      id: "intra",
+      id: "intro",
       title: "LE SITE ULTIME (intra)",
       file: "kinder.html",
       category: "intra",
       kind: "niveaux -18 → 99+",
       description: "Le fichier qui te permet de partir sur autre chose."
+    },
+    {
+      id: "lorema",
+      title: "LE LIVRE ULTIME (A)",
+      file: "lorem-a.html",
+      category: "intra",
+      kind: "niveaux -18 → 99+",
+      description: "Le fichier qui te permet de partir sur autre chose."
+    },
+    {
+      id: "loremb",
+      title: "LE LIVRE ULTIME (B)",
+      file: "lorem-b.html",
+      category: "intra",
+      kind: "niveaux -18 → 99+",
+      description: "Le fichier qui te permet de partir sur autre chose."
+    },
+    {
+      id: "loremc",
+      title: "LE LIVRE ULTIME (C)",
+      file: "lorem-c.html",
+      category: "intra",
+      kind: "niveaux -18 → 99+",
+      description: "Le fichier qui te permet de partir sur autre chose."
     }
+
+    
 
 
 
@@ -1250,6 +1276,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
