--- a/brol.html
+++ b/brol.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -393,7 +392,7 @@ footer {
   <a href="belgilikjes.html">💾 Belgilikjes</a>
   <a href="mr-campagne.html">🔵 MR En Mieux</a>
   <a href="organisation.html">🕵️ L’Organisation</a>
-  <a href="etagere.html">📚 Étagère</a>
+  <a href="https://duckface-detector.vercel.app/">📚 Étagère</a>
 </nav>
 
 <main>
