--- a/index.html
+++ b/index.html
@@ -926,6 +926,17 @@
           <button type="button" class="embed-btn" data-embed="jeu2">
             <span class="icon">▶️</span> JEU 2
           </button>
+          <button type="button" class="embed-btn" data-embed="foot-vid">
+            <span class="icon">▶️</span> PDF
+          </button>
+          <button type="button" class="embed-btn" data-embed="foot-pdf">
+            <span class="icon">▶️</span> PDF
+          </button>
+          <button type="button" class="embed-btn" data-embed="pub">
+            <span class="icon">▶️</span> Pub
+          </button>
+
+          
         </div>
                 </section>
 <iframe width="90%" height="315" src="https://www.youtube.com/embed/zYGS4T50VJc?si=2lV64xXjpKOGVttE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -1131,7 +1142,29 @@
       label: "JEU",
       url: "tailport.html",
       description: "Application."
+    },
+    jeu2: {
+      label: "JEU",
+      url: "tailport.html",
+      description: "Application."
+    },
+    foot-vid: {
+      label: "Foot",
+      url: "https://www.youtube.com/embed/NF_wWmvJXbA?si=XAT1JHQoIV6Uws82",
+      description: "Application."
+    },
+    foot-pdf: {
+      label: "Foot",
+      url: "https://ouaisfieu.github.io/lapin/Football_The_Extreme_Wealth_Laboratory.pdf",
+      description: "Application."
+    },
+    pub: {
+      label: "pub",
+      url: "sky.mp4",
+      description: "Application."
     }
+
+
     
   };
 
@@ -1301,6 +1334,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
