--- a/index.html
+++ b/index.html
@@ -921,22 +921,11 @@
             <span class="icon">🐧</span> Tirage Dés
           </button>
           <button type="button" class="embed-btn" data-embed="jeu">
-            <span class="icon">▶️</span> JEU
+            <span class="icon">▶️</span> Info
           </button>
           <button type="button" class="embed-btn" data-embed="jeu2">
-            <span class="icon">▶️</span> JEU 2
+            <span class="icon">▶️</span> JEU
           </button>
-          <button type="button" class="embed-btn" data-embed="foot-vid">
-            <span class="icon">▶️</span> PDF
-          </button>
-          <button type="button" class="embed-btn" data-embed="foot-pdf">
-            <span class="icon">▶️</span> PDF
-          </button>
-          <button type="button" class="embed-btn" data-embed="pub">
-            <span class="icon">▶️</span> Pub
-          </button>
-
-          
         </div>
                 </section>
 <iframe width="90%" height="315" src="https://www.youtube.com/embed/zYGS4T50VJc?si=2lV64xXjpKOGVttE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -997,7 +986,7 @@
     {
       id: "base",
       title: "LE SITE ULTIME (bidex)",
-      file: "mr.html",
+      file: "https://www.youtube.com/embed/TQUsLAAZuhU?si=GSdV78G5t6uiAcgO",
       category: "base",
       kind: "niveaux -4 → 5",
       description: "Le fichier qui te permet de partir de 1 et monter progressivement."
@@ -1134,7 +1123,7 @@
       description: "Application."
     },
     jeu: {
-      label: "JEU",
+      label: "Info",
       url: "https://dl.ouaisfi.eu/usba/1/vids/Taupe_r%C3%A9cite_Chomsky_avec_sous_titres.mp4",
       description: "Application."
     },
@@ -1142,29 +1131,7 @@
       label: "JEU",
       url: "tailport.html",
       description: "Application."
-    },
-    jeu2: {
-      label: "JEU",
-      url: "tailport.html",
-      description: "Application."
-    },
-    foot-vid: {
-      label: "Foot",
-      url: "https://www.youtube.com/embed/NF_wWmvJXbA?si=XAT1JHQoIV6Uws82",
-      description: "Application."
-    },
-    foot-pdf: {
-      label: "Foot",
-      url: "https://ouaisfieu.github.io/lapin/Football_The_Extreme_Wealth_Laboratory.pdf",
-      description: "Application."
-    },
-    pub: {
-      label: "pub",
-      url: "sky.mp4",
-      description: "Application."
     }
-
-
     
   };
 
@@ -1334,8 +1301,6 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
-
-
 
 
 
