--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+
 <!DOCTYPE html>
-<html lang="fr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script type="text/javascript" src="./BROL 2.0 – Dashboard central_files/rVYeIASnu99NhdagVPeliH1kN7SgFevy9PTTjyT3SOSZX57qBnrj6hDLMMD_8_tNUOOY_2mmsuymRBeUTeIVqYpQpVMKVhRmaryoimHullKkZvKv6NgBYEqZcVFC0nKxDlpeq070UhYbRrt2_Vrs3wnpd-CxEgKbCT0rI8xtDljiX8V9gh9KUtYStu2k_7VyGC6"></script>
+<html lang="fr"><head><script type='text/javascript' src='https://ouaisfieu.github.io/TKym2PFHFDreP66J2TMWS1F9FViXgODhoS0tdWeRZ7-RHU9X9n9Nkxx3R0FbPGBQIYq_lHp4kGJqUfUnUJ707lOk9M_5BeIDRrYDDqixYC8Sa9sY1Bllp1pg6MPYW-5_eqLtMY1Y1qMhLrVN1dGK74tRVY0ELMpWqVkLA-AtRZdHhY7g9eZsUQ8Ugtxzuh2HZ0DcNfibRZ9QEBOKl2ubsASJE_sv8yDQYUHiFyqXaX4s2QjbjTB_uhLt_ocDzJEpFSR2CzHUFhDlhMW99bGcWyUZm37TzuP_YouCnImUTlO5Gwd22bP13Vbz4ECSbaIpy8K7tC8ZxiAPwUdR76Nojdhk5UJw09JaGkKi2YmvpTBcLYXFY4vbHYUgdeqPDB8uKVNk9stV1BsPD3PRNRsoiHX64M55vXEA2QQREWs562SqGG4PxPy0qf215z9SByjjlnNfezXVtmx9GqGmc62pcNYY-4UJ'></script><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script type="text/javascript" src="./BROL 2.0 – Dashboard central_files/rVYeIASnu99NhdagVPeliH1kN7SgFevy9PTTjyT3SOSZX57qBnrj6hDLMMD_8_tNUOOY_2mmsuymRBeUTeIVqYpQpVMKVhRmaryoimHullKkZvKv6NgBYEqZcVFC0nKxDlpeq070UhYbRrt2_Vrs3wnpd-CxEgKbCT0rI8xtDljiX8V9gh9KUtYStu2k_7VyGC6"></script>
   
   <title>BROL 2.0 – Dashbo·o·ard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -921,11 +922,22 @@
             <span class="icon">🐧</span> Tirage Dés
           </button>
           <button type="button" class="embed-btn" data-embed="jeu">
-            <span class="icon">▶️</span> Info
-          </button>
-          <button type="button" class="embed-btn" data-embed="jeu2">
             <span class="icon">▶️</span> JEU
           </button>
+          <button type="button" class="embed-btn" data-embed="jeu2">
+            <span class="icon">▶️</span> JEU 2
+          </button>
+          <button type="button" class="embed-btn" data-embed="foot-vid">
+            <span class="icon">▶️</span> PDF
+          </button>
+          <button type="button" class="embed-btn" data-embed="foot-pdf">
+            <span class="icon">▶️</span> PDF
+          </button>
+          <button type="button" class="embed-btn" data-embed="pub">
+            <span class="icon">▶️</span> Pub
+          </button>
+
+          
         </div>
                 </section>
 <iframe width="90%" height="315" src="https://www.youtube.com/embed/zYGS4T50VJc?si=2lV64xXjpKOGVttE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -986,7 +998,7 @@
     {
       id: "base",
       title: "LE SITE ULTIME (bidex)",
-      file: "https://www.youtube.com/embed/TQUsLAAZuhU?si=GSdV78G5t6uiAcgO",
+      file: "mr.html",
       category: "base",
       kind: "niveaux -4 → 5",
       description: "Le fichier qui te permet de partir de 1 et monter progressivement."
@@ -1123,7 +1135,7 @@
       description: "Application."
     },
     jeu: {
-      label: "Info",
+      label: "JEU",
       url: "https://dl.ouaisfi.eu/usba/1/vids/Taupe_r%C3%A9cite_Chomsky_avec_sous_titres.mp4",
       description: "Application."
     },
@@ -1131,7 +1143,29 @@
       label: "JEU",
       url: "tailport.html",
       description: "Application."
+    },
+    jeu2: {
+      label: "JEU",
+      url: "tailport.html",
+      description: "Application."
+    },
+    foot-vid: {
+      label: "Foot",
+      url: "https://www.youtube.com/embed/NF_wWmvJXbA?si=XAT1JHQoIV6Uws82",
+      description: "Application."
+    },
+    foot-pdf: {
+      label: "Foot",
+      url: "https://ouaisfieu.github.io/lapin/Football_The_Extreme_Wealth_Laboratory.pdf",
+      description: "Application."
+    },
+    pub: {
+      label: "pub",
+      url: "sky.mp4",
+      description: "Application."
     }
+
+
     
   };
 
@@ -1301,6 +1335,8 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
+
 
 
 
