--- a/organisation.html
+++ b/organisation.html
@@ -407,7 +407,7 @@ footer {
   <a href="tu-raques-ou-pas.html">💸 Tu Raques Ou Pas</a>
   <a href="belgilikjes.html">💾 Belgilikjes</a>
   <a href="mr-campagne.html">🔵 MR En Mieux</a>
-  <a href="campagne-clones.html">🎭 Clones Ecolo/PTB</a>
+  <a href="brol.html">🎭 Clones Ecolo/PTB</a>
   <a href="etagere.html">📚 Étagère</a>
 </nav>
 
