--- a/belgilikjes.html
+++ b/belgilikjes.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -233,7 +232,7 @@ footer {
   <a href="tu-raques-ou-pas.html">💸 Tu Raques Ou Pas</a>
   <a href="mr-campagne.html">🔵 MR En Mieux</a>
   <a href="campagne-clones.html">💚❤️ Clones Ecolo/PTB</a>
-  <a href="organisation.html">🕵️ L’Organisation</a>
+  <a href="brol.html">🕵️ L’Organisation</a>
   <a href="etagere.html">📚 Étagère</a>
 </div>
 
