--- a/belgilikjes.html
+++ b/belgilikjes.html
@@ -231,8 +231,8 @@ footer {
   <a href="index.html">🏠 Arcade</a>
   <a href="tu-raques-ou-pas.html">💸 Tu Raques Ou Pas</a>
   <a href="mr-campagne.html">🔵 MR En Mieux</a>
-  <a href="campagne-clones.html">💚❤️ Clones Ecolo/PTB</a>
-  <a href="brol.html">🕵️ L’Organisation</a>
+  <a href="brol.html">💚❤️ Clones Ecolo/PTB</a>
+  <a href="organisation.html">🕵️ L’Organisation</a>
   <a href="etagere.html">📚 Étagère</a>
 </div>
 
