--- a/capsule-4.html
+++ b/capsule-4.html
@@ -684,7 +684,8 @@
             'guide.md',
             'notes.md',
             'warning.md',
-            'avertissement.md'
+            'avertissement.md',
+            'reddit.md'
         ];
 
         let currentFileIndex = -1;
