--- a/capsule-4.html
+++ b/capsule-4.html
@@ -626,6 +626,14 @@
                 font-size: 1.5rem;
             }
         }
+
+        #markdownContent pre,
+        #markdownContent code {
+            white-space: pre-wrap;
+            word-break: break-word;
+            overflow-wrap: anywhere;
+}
+
     </style>
 </head>
 <body>
