--- a/capsule-4.html
+++ b/capsule-4.html
@@ -693,7 +693,8 @@
             'notes.md',
             'warning.md',
             'avertissement.md',
-            'reddit.md'
+            'reddit.md',
+            'ta_place.md',
         ];
 
         let currentFileIndex = -1;
