--- a/clov.html
+++ b/clov.html
@@ -914,7 +914,9 @@
             'guide.md',
             'notes.md',
             'warning.md',
-            'avertissement.md'
+            'avertissement.md',
+            'reddit.md',
+            
         ];
 
         let currentFileIndex = -1;
