--- a/capsule-4.html
+++ b/capsule-4.html
@@ -694,7 +694,8 @@
             'warning.md',
             'avertissement.md',
             'reddit.md',
-            'ta_place.md'
+            'ta_place.md',
+            'markdown.md'
         ];
 
         let currentFileIndex = -1;
