--- a/clov.html
+++ b/clov.html
@@ -830,6 +830,14 @@
                 width: 100%;
             }
         }
+
+        #markdownContent pre,
+        #markdownContent code {
+            white-space: pre-wrap;
+            word-break: break-word;
+            overflow-wrap: anywhere;
+}
+
     </style>
 </head>
 <body>
