--- a/index.html
+++ b/index.html
@@ -1001,6 +1001,36 @@
           <button type="button" class="embed-btn" data-embed="logo">
             <span class="icon">🐧</span> Logo provisoire
           </button>
+          <button type="button" class="embed-btn" data-embed="pdf-veille-2">
+            <span class="icon">📄</span> PDF Veille (2)
+          </button>
+          <button type="button" class="embed-btn" data-embed="speaker">
+            <span class="icon">🐧</span> Speaker
+          </button>
+          <button type="button" class="embed-btn" data-embed="king">
+            <span class="icon">🐧</span> Pingouin
+          </button>
+          <button type="button" class="embed-btn" data-embed="dices">
+            <span class="icon">🐧</span> Tirage Dés
+          </button>
+          <button type="button" class="embed-btn" data-embed="shop">
+            <span class="icon">🐧</span> Magasin
+          </button>
+          <button type="button" class="embed-btn" data-embed="extronet">
+            <span class="icon">🐧</span> ExtrOonet
+          </button>
+          <button type="button" class="embed-btn" data-embed="grok">
+            <span class="icon">🐧</span> GOODIE
+          </button>
+          <button type="button" class="embed-btn" data-embed="goodies">
+            <span class="icon">🐧</span> GOODIES
+          </button>
+          <button type="button" class="embed-btn" data-embed="goooodies">
+            <span class="icon">🐧</span> GOOOODIES !!!
+          </button>
+          <button type="button" class="embed-btn" data-embed="logo">
+            <span class="icon">🐧</span> Logo provisoire
+          </button>
         </div>
                 </section>
 <iframe width="90%" height="315" src="https://www.youtube.com/embed/9WJHAu0IE-g?si=Pi-FDBx5Ah__0woE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -1437,6 +1467,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
