--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@
     },
     stopify: {
       label: "Spotify – playlist exemple",
-      url: "https://open.spotify.com/embed/playlist/1bmRdNMfrwZJsvCLbJRuzn?pi=oHZYAhUMT4SHW",
+      url: "https://open.spotify.com/embed/playlist/1Z4IMZLD1nZr1kZdldcnnz?utm_source=generator",
       description: "Exemple de playlist Spotify (embed). Remplace l’URL par la tienne."
     },
     "pdf-plaidoyer-2": {
@@ -1477,6 +1477,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
