--- a/index.html
+++ b/index.html
@@ -1220,7 +1220,7 @@
     },
     youtubeuz: {
       label: "YouTube – exemple",
-      url: "https://www.youtube-nocookie.com/embed/9l-ViOOFH-s?si=KQWhfQK4_hP1XB-4",
+      url: "https://www.youtube.com/embed/SrhJjyTEJEI?si=ohMOGtl8m7Ul3pTx",
       description: "Exemple d’embed YouTube. Remplace l’ID de vidéo par ce que tu veux."
     },
     spotify: {
@@ -1477,6 +1477,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
