--- a/index.html
+++ b/index.html
@@ -906,81 +906,81 @@
         </p>
 
         <div class="embed-row">
-          <button type="button" class="embed-btn" data-embed="penguin">
+          <button type="button" class="embed-btn" data-embed="belier">
             <span class="icon">🐧</span> Tarot
           </button>
-          <button type="button" class="embed-btn" data-embed="youtube">
+          <button type="button" class="embed-btn" data-embed="taureau">
             <span class="icon">▶️</span> Accueil
           </button>
-          <button type="button" class="embed-btn" data-embed="intranet">
+          <button type="button" class="embed-btn" data-embed="gemeaux">
             <span class="icon">🐧</span> Intranet
           </button>
-          <button type="button" class="embed-btn" data-embed="spotify">
+          <button type="button" class="embed-btn" data-embed="cancer">
             <span class="icon">🎵</span> Spotify (playlist)
           </button>
 
-          <button type="button" class="embed-btn" data-embed="speaker">
+          <button type="button" class="embed-btn" data-embed="lion">
             <span class="icon">🐧</span> Speaker
           </button>
           <button type="button" class="embed-btn" data-embed="king">
             <span class="icon">🐧</span> Pingouin
           </button>
-          <button type="button" class="embed-btn" data-embed="dices">
+          <button type="button" class="embed-btn" data-embed="vierge">
             <span class="icon">🐧</span> Tirage Dés
           </button>
-          <button type="button" class="embed-btn" data-embed="jeu">
+          <button type="button" class="embed-btn" data-embed="balance">
             <span class="icon">▶️</span> JEU
           </button>
-          <button type="button" class="embed-btn" data-embed="penguin">
+          <button type="button" class="embed-btn" data-embed="scorpion">
             <span class="icon">🐧</span> Tarot
           </button>
           
-          <button type="button" class="embed-btn" data-embed="glitch">
+          <button type="button" class="embed-btn" data-embed="sagittaire">
             <span class="icon">▶️</span> YouTube
           </button>
-          <button type="button" class="embed-btn" data-embed="glitchy">
+          <button type="button" class="embed-btn" data-embed="capricorne">
             <span class="icon">▶️</span> YouTube
           </button>
-          <button type="button" class="embed-btn" data-embed="youtubeu">
+          <button type="button" class="embed-btn" data-embed="verseau">
             <span class="icon">▶️</span> YouTube
           </button>
-          <button type="button" class="embed-btn" data-embed="nom">
+          <button type="button" class="embed-btn" data-embed="poissons">
             <span class="icon">▶️</span> YouTube
           </button>
           </button>
-          <button type="button" class="embed-btn" data-embed="youtubeuz">
+          <button type="button" class="embed-btn" data-embed="rat">
             <span class="icon">▶️</span> YouTube
           </button>
           </button>
           
-          <button type="button" class="embed-btn" data-embed="intranet">
+          <button type="button" class="embed-btn" data-embed="boeuf">
             <span class="icon">🐧</span> Intranet
           </button>
-          <button type="button" class="embed-btn" data-embed="spotify">
+          <button type="button" class="embed-btn" data-embed="tigre">
             <span class="icon">🎵</span> Spotify
           </button>
-          <button type="button" class="embed-btn" data-embed="stopify">
+          <button type="button" class="embed-btn" data-embed="lapin">
             <span class="icon">🎵</span> Stopify
           </button>
-          <button type="button" class="embed-btn" data-embed="pdf-plaidoyer-2">
+          <button type="button" class="embed-btn" data-embed="dragon">
             <span class="icon">📄</span> PDF plaidoyer-ulb
           </button>
-          <button type="button" class="embed-btn" data-embed="pdf-plaidoyer-1">
+          <button type="button" class="embed-btn" data-embed="serpent">
             <span class="icon">📄</span> PDF plaidoyer-jp
           </button>
-          <button type="button" class="embed-btn" data-embed="pdf-veille-1">
+          <button type="button" class="embed-btn" data-embed="cheval">
             <span class="icon">📄</span> PDF Veille (1)
           </button>
-          <button type="button" class="embed-btn" data-embed="pdf-veille-2">
+          <button type="button" class="embed-btn" data-embed="chevre">
             <span class="icon">📄</span> PDF Veille (2)
           </button>
-          <button type="button" class="embed-btn" data-embed="speaker">
+          <button type="button" class="embed-btn" data-embed="coq">
             <span class="icon">🐧</span> Speaker
           </button>
-          <button type="button" class="embed-btn" data-embed="king">
+          <button type="button" class="embed-btn" data-embed="chien">
             <span class="icon">🐧</span> Pingouin
           </button>
-          <button type="button" class="embed-btn" data-embed="dices">
+          <button type="button" class="embed-btn" data-embed="cochon">
             <span class="icon">🐧</span> Tirage Dés
           </button>
           <button type="button" class="embed-btn" data-embed="shop">
@@ -1001,7 +1001,7 @@
           <button type="button" class="embed-btn" data-embed="logo">
             <span class="icon">🐧</span> Logo provisoire
           </button>
-          <button type="button" class="embed-btn" data-embed="pdf-veille-2">
+          <button type="button" class="embed-btn" data-embed="chom">
             <span class="icon">📄</span> PDF Veille (2)
           </button>
           <button type="button" class="embed-btn" data-embed="speaker">
@@ -1013,22 +1013,22 @@
           <button type="button" class="embed-btn" data-embed="dices">
             <span class="icon">🐧</span> Tirage Dés
           </button>
-          <button type="button" class="embed-btn" data-embed="shop">
+          <button type="button" class="embed-btn" data-embed="logos">
             <span class="icon">🐧</span> Magasin
           </button>
-          <button type="button" class="embed-btn" data-embed="extronet">
+          <button type="button" class="embed-btn" data-embed="recrutement">
             <span class="icon">🐧</span> ExtrOonet
           </button>
-          <button type="button" class="embed-btn" data-embed="grok">
+          <button type="button" class="embed-btn" data-embed="nultra">
             <span class="icon">🐧</span> GOODIE
           </button>
-          <button type="button" class="embed-btn" data-embed="goodies">
+          <button type="button" class="embed-btn" data-embed="annonce">
             <span class="icon">🐧</span> GOODIES
           </button>
-          <button type="button" class="embed-btn" data-embed="goooodies">
+          <button type="button" class="embed-btn" data-embed="abba">
             <span class="icon">🐧</span> GOOOODIES !!!
           </button>
-          <button type="button" class="embed-btn" data-embed="logo">
+          <button type="button" class="embed-btn" data-embed="kiss">
             <span class="icon">🐧</span> Logo provisoire
           </button>
         </div>
@@ -1477,6 +1477,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
