--- a/index.html
+++ b/index.html
@@ -907,129 +907,129 @@
 
         <div class="embed-row">
           <button type="button" class="embed-btn" data-embed="belier">
-            <span class="icon">🐧</span> Tarot
+            <span class="icon">🐧</span> belier
           </button>
           <button type="button" class="embed-btn" data-embed="taureau">
-            <span class="icon">▶️</span> Accueil
+            <span class="icon">▶️</span> taureau
           </button>
           <button type="button" class="embed-btn" data-embed="gemeaux">
-            <span class="icon">🐧</span> Intranet
+            <span class="icon">🐧</span> gemeaux
           </button>
           <button type="button" class="embed-btn" data-embed="cancer">
-            <span class="icon">🎵</span> Spotify (playlist)
+            <span class="icon">🎵</span> cancer
           </button>
 
           <button type="button" class="embed-btn" data-embed="lion">
-            <span class="icon">🐧</span> Speaker
+            <span class="icon">🐧</span> lion
           </button>
           <button type="button" class="embed-btn" data-embed="king">
-            <span class="icon">🐧</span> Pingouin
+            <span class="icon">🐧</span> king
           </button>
           <button type="button" class="embed-btn" data-embed="vierge">
-            <span class="icon">🐧</span> Tirage Dés
+            <span class="icon">🐧</span> vierge
           </button>
           <button type="button" class="embed-btn" data-embed="balance">
-            <span class="icon">▶️</span> JEU
+            <span class="icon">▶️</span> balance
           </button>
           <button type="button" class="embed-btn" data-embed="scorpion">
-            <span class="icon">🐧</span> Tarot
+            <span class="icon">🐧</span> scorpion
           </button>
           
           <button type="button" class="embed-btn" data-embed="sagittaire">
-            <span class="icon">▶️</span> YouTube
+            <span class="icon">▶️</span> sagittaire
           </button>
           <button type="button" class="embed-btn" data-embed="capricorne">
-            <span class="icon">▶️</span> YouTube
+            <span class="icon">▶️</span> capricorne
           </button>
           <button type="button" class="embed-btn" data-embed="verseau">
-            <span class="icon">▶️</span> YouTube
+            <span class="icon">▶️</span> verseau
           </button>
           <button type="button" class="embed-btn" data-embed="poissons">
-            <span class="icon">▶️</span> YouTube
+            <span class="icon">▶️</span> poissons
           </button>
           </button>
           <button type="button" class="embed-btn" data-embed="rat">
-            <span class="icon">▶️</span> YouTube
+            <span class="icon">▶️</span> rat
           </button>
           </button>
           
           <button type="button" class="embed-btn" data-embed="boeuf">
-            <span class="icon">🐧</span> Intranet
+            <span class="icon">🐧</span> boeuf
           </button>
           <button type="button" class="embed-btn" data-embed="tigre">
-            <span class="icon">🎵</span> Spotify
+            <span class="icon">🎵</span> tigre
           </button>
           <button type="button" class="embed-btn" data-embed="lapin">
-            <span class="icon">🎵</span> Stopify
+            <span class="icon">🎵</span> lapin
           </button>
           <button type="button" class="embed-btn" data-embed="dragon">
-            <span class="icon">📄</span> PDF plaidoyer-ulb
+            <span class="icon">📄</span> dragon
           </button>
           <button type="button" class="embed-btn" data-embed="serpent">
-            <span class="icon">📄</span> PDF plaidoyer-jp
+            <span class="icon">📄</span> serpent
           </button>
           <button type="button" class="embed-btn" data-embed="cheval">
-            <span class="icon">📄</span> PDF Veille (1)
+            <span class="icon">📄</span> cheval
           </button>
           <button type="button" class="embed-btn" data-embed="chevre">
-            <span class="icon">📄</span> PDF Veille (2)
+            <span class="icon">📄</span> chevre
           </button>
           <button type="button" class="embed-btn" data-embed="coq">
-            <span class="icon">🐧</span> Speaker
+            <span class="icon">🐧</span> coq
           </button>
           <button type="button" class="embed-btn" data-embed="chien">
-            <span class="icon">🐧</span> Pingouin
+            <span class="icon">🐧</span> chien
           </button>
           <button type="button" class="embed-btn" data-embed="cochon">
-            <span class="icon">🐧</span> Tirage Dés
+            <span class="icon">🐧</span> cochon
           </button>
           <button type="button" class="embed-btn" data-embed="shop">
-            <span class="icon">🐧</span> Magasin
+            <span class="icon">🐧</span> shop
           </button>
           <button type="button" class="embed-btn" data-embed="extronet">
-            <span class="icon">🐧</span> ExtrOonet
+            <span class="icon">🐧</span> extronet
           </button>
           <button type="button" class="embed-btn" data-embed="grok">
-            <span class="icon">🐧</span> GOODIE
+            <span class="icon">🐧</span> grok
           </button>
           <button type="button" class="embed-btn" data-embed="goodies">
-            <span class="icon">🐧</span> GOODIES
+            <span class="icon">🐧</span> goodies
           </button>
           <button type="button" class="embed-btn" data-embed="goooodies">
             <span class="icon">🐧</span> GOOOODIES !!!
           </button>
           <button type="button" class="embed-btn" data-embed="logo">
-            <span class="icon">🐧</span> Logo provisoire
+            <span class="icon">🐧</span> Logo
           </button>
           <button type="button" class="embed-btn" data-embed="chom">
-            <span class="icon">📄</span> PDF Veille (2)
+            <span class="icon">📄</span> Chom
           </button>
           <button type="button" class="embed-btn" data-embed="speaker">
             <span class="icon">🐧</span> Speaker
           </button>
           <button type="button" class="embed-btn" data-embed="king">
-            <span class="icon">🐧</span> Pingouin
+            <span class="icon">🐧</span> Sky
           </button>
           <button type="button" class="embed-btn" data-embed="dices">
-            <span class="icon">🐧</span> Tirage Dés
+            <span class="icon">🐧</span> dices
           </button>
           <button type="button" class="embed-btn" data-embed="logos">
-            <span class="icon">🐧</span> Magasin
+            <span class="icon">🐧</span> logos
           </button>
           <button type="button" class="embed-btn" data-embed="recrutement">
-            <span class="icon">🐧</span> ExtrOonet
+            <span class="icon">🐧</span> recrutement
           </button>
           <button type="button" class="embed-btn" data-embed="nultra">
-            <span class="icon">🐧</span> GOODIE
+            <span class="icon">🐧</span> nultra
           </button>
           <button type="button" class="embed-btn" data-embed="annonce">
-            <span class="icon">🐧</span> GOODIES
+            <span class="icon">🐧</span> annonce
           </button>
           <button type="button" class="embed-btn" data-embed="abba">
-            <span class="icon">🐧</span> GOOOODIES !!!
+            <span class="icon">🐧</span> ABBA !!!
           </button>
           <button type="button" class="embed-btn" data-embed="kiss">
-            <span class="icon">🐧</span> Logo provisoire
+            <span class="icon">🐧</span> Bisous
           </button>
         </div>
                 </section>
@@ -1477,6 +1477,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
