--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
           <button type="button" class="embed-btn" data-embed="speaker">
             <span class="icon">🐧</span> Speaker
           </button>
-          <button type="button" class="embed-btn" data-embed="king">
+          <button type="button" class="embed-btn" data-embed="lion">
             <span class="icon">🐧</span> Sky
           </button>
           <button type="button" class="embed-btn" data-embed="dices">
@@ -1208,6 +1208,11 @@
       url: "https://www.youtube.com/embed/zYGS4T50VJc?si=2_xPg2xpiXHVERr9",
       description: "Exemple d’embed YouTube. Remplace l’ID de vidéo par ce que tu veux."
     },
+    king: {
+      label: "YouTube – exemple",
+      url: "https://www.youtube.com/embed/SrhJjyTEJEI?si=tDkwaxxCZu09vb6l",
+      description: "Exemple d’embed YouTube. Remplace l’ID de vidéo par ce que tu veux."
+    }
     vierge: {
       label: "YouTube – exemple",
       url: "https://www.youtube.com/embed/18fDvEYhZtI?si=dyPqvuOiHaKqtODl",
@@ -1230,7 +1235,7 @@
     },
     sagittaire: {
       label: "Spotify – playlist exemple",
-      url: "https://open.spotify.com/embed/playlist/1bmRdNMfrwZJsvCLbJRuzn?pi=oHZYAhUMT4SHW",
+      url: "https://open.spotify.com/embed/playlist/6mReaJvW4o1ER9bAngiUYG",
       description: "Exemple de playlist Spotify (embed). Remplace l’URL par la tienne."
     },
     "capricorne": {
@@ -1245,7 +1250,7 @@
     },
     "poissons": {
       label: "Veille (1)",
-      url: "../pdfs/veille-citoyenne-enjeux.pdf",
+      url: "pdfs/veille-citoyenne-enjeux.pdf",
       description: "PDF local : idem."
     },
     rat: {
@@ -1255,8 +1260,8 @@
     },
     "boeuf": {
       label: "Veille (2)",
-      url: "../pdfs/guide-reseau-veille.pdf",
-      description: "PDF local : idem."
+      url: "https://dl.ouaisfi.eu/pdfs/guide-reseau-veille.pdf",
+      description: "PDF semi-externe : idem."
     },
     tigre: {
       label: "Chargé de com'",
@@ -1290,7 +1295,7 @@
     },
     singe: {
       label: "goodies",
-      url: "orga-recrutement.html",
+      url: "recrutement.html",
       description: "En construction."
     },
     coq: {
@@ -1477,6 +1482,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
