--- a/index.html
+++ b/index.html
@@ -1016,19 +1016,19 @@
           <button type="button" class="embed-btn" data-embed="logos">
             <span class="icon">🐧</span> logos
           </button>
-          <button type="button" class="embed-btn" data-embed="recrutement">
+          <button type="button" class="embed-btn" data-embed="glitchy">
             <span class="icon">🐧</span> recrutement
           </button>
-          <button type="button" class="embed-btn" data-embed="nultra">
+          <button type="button" class="embed-btn" data-embed="glitch">
             <span class="icon">🐧</span> nultra
           </button>
-          <button type="button" class="embed-btn" data-embed="annonce">
+          <button type="button" class="embed-btn" data-embed="youtube">
             <span class="icon">🐧</span> annonce
           </button>
-          <button type="button" class="embed-btn" data-embed="abba">
+          <button type="button" class="embed-btn" data-embed="penguin">
             <span class="icon">🐧</span> ABBA !!!
           </button>
-          <button type="button" class="embed-btn" data-embed="kiss">
+          <button type="button" class="embed-btn" data-embed="intranet">
             <span class="icon">🐧</span> Bisous
           </button>
         </div>
@@ -1478,6 +1478,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
