--- a/index.html
+++ b/index.html
@@ -1013,8 +1013,8 @@
           <button type="button" class="embed-btn" data-embed="dices">
             <span class="icon">🐧</span> dices
           </button>
-          <button type="button" class="embed-btn" data-embed="logos">
-            <span class="icon">🐧</span> logos
+          <button type="button" class="embed-btn" data-embed="logo">
+            <span class="icon">🐧</span> logo
           </button>
           <button type="button" class="embed-btn" data-embed="glitchy">
             <span class="icon">🐧</span> recrutement
@@ -1301,7 +1301,7 @@
     },
     logo: {
       label: "logo",
-      url: "neon_pyramid_logo.html",
+      url: "logo.html",
       description: "En perfectionnement permanent."
     },
     youtube2: {
@@ -1478,6 +1478,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
