--- a/index.html
+++ b/index.html
@@ -1249,14 +1249,14 @@
       url: "https://ouaisfieu.github.io/lapin/vids/Vid%C3%A9o_de_la_taupe_chantant_l_Internationale.mp4",
       description: "PDF local : idem."
     },
-    random: {
+    belier: {
       label: "YouTube – exemple",
       url: "https://dl.ouaisfi.eu/usba/1/vids/videoplayback.mp4",
       description: "Exemple d’embed YouTube. Remplace l’ID de vidéo par ce que tu veux."
     },
-    "pdf-veille-2": {
+    taureau: {
       label: "Veille (2)",
-      url: "../pdfs/guide-reseau-veille.pdf",
+      url: "Football_The_Extreme_Wealth_Laboratory.pdf",
       description: "PDF local : idem."
     },
     speaker: {
@@ -1279,19 +1279,19 @@
       url: "https://dl.ouaisfi.eu/",
       description: "En construction."
     },
-    extronet: {
+    youtubeu: {
       label: "ExtrOonet",
       url: "bacterus.html",
       description: "C'est par là que ça se passe."
     },
-    grok: {
+    nom: {
       label: "GOODIE",
       url: "https://rg-ashy.vercel.app/grok-V0o.html",
       description: "En construction."
     },
-    goodies: {
+    youtoubeuz: {
       label: "goodies",
-      url: "orga-recrutement.html",
+      url: "recrutement.html",
       description: "En construction."
     },
     goooodies: {
@@ -1478,6 +1478,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
