--- a/index.html
+++ b/index.html
@@ -1184,6 +1184,16 @@
        // --- Embeds : distractions & annexes ---
   // Tu peux adapter ces URLs selon tes goûts.
   const embeds = {
+    cancer: {
+      label: "Tarot pas illustré",
+      url: "https://ouaisfieu.appsmith.com/app/tarotboulotproto-v3-1/tarotsimpletirage-68555a12a22d7c48aa0d27ad",
+      description: "Tarot de Boulot et de Marseille sans illustration."
+    },
+    lion: {
+      label: "Tarot pas illustré",
+      url: "https://ouaisfieu.github.io/bxl2030/pnj/gisele-icroit/",
+      description: "Tarot de Boulot et de Marseille sans illustration."
+    },
     penguin: {
       label: "Tarot pas illustré",
       url: "https://ouaisfieu.appsmith.com/app/tarotboulotproto-v3-1/tarotsimpletirage-68555a12a22d7c48aa0d27ad",
